kubernetes/manifests/microservices/app-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: default
spec:
  parentRefs:
  - name: public-gateway
    namespace: envoy-gateway-system
  hostnames:
  - ahmedoun.aks.karimarous.com
  rules:
  - backendRefs:
    - name: app-svc
      port: 80
